crates/oxidoc/tests/snapshots/golden_writer__native__common__link-title-attr.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Link
        ( "l" , [ "ext" ] , [] )
        [ Str "text" ]
        ( "http://example.com" , "a title" )
    ]
]
