crates/oxidoc/tests/snapshots/golden_writer__native__common__literal-control-chars.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "before"
    , Space
    , Str "x\NUL\SOH\a\USy"
    , Space
    , Str "after"
    ]
]
