crates/oxidoc/tests/snapshots/golden_writer__native__common__nested-emphasis.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Emph
        [ Str "emph"
        , Space
        , Str "with"
        , Space
        , Strong [ Str "strong" ]
        , Space
        , Str "inside"
        ]
    , Space
    , Str "end"
    ]
]
