crates/oxidoc/tests/snapshots/golden_writer__native__common__nonascii-escape.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "caf\233"
    , Space
    , Str "r\233sum\233"
    , Space
    , Str "na\239ve"
    ]
]
