crates/oxidoc/tests/snapshots/golden_writer__native__common__ordered-lower-roman.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ OrderedList
    ( 1 , LowerRoman , Period )
    [ [ Plain [ Str "one" ] ] , [ Plain [ Str "two" ] ] ]
]
