crates/oxidoc/tests/snapshots/golden_writer__native__common__ordered-one-paren.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ OrderedList
    ( 1 , Decimal , OneParen )
    [ [ Plain [ Str "one" ] ] , [ Plain [ Str "two" ] ] ]
]
